# MiniLab2

./: .gitignore  README.md  pyproject.toml
server/: Human.py  IssueData.py  __init__.py  main.py
