[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Daria <dkoroleva2004@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start-service = "server.main:start"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.32.0"
requests = "^2.32.3"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
